--- a/in_dev/ML_muon_tracks-worked.ipynb
+++ b/in_dev/ML_muon_tracks-worked.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +104,7 @@
        "4  0.409664 -0.171429"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
        "array([-0.3862925 , -0.01158637])"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -169,7 +169,7 @@
        "(array([[-0.3862925]]), array([-0.01158637]))"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +208,7 @@
        "(array([-0.38505106]), array([-0.01110425]))"
       ]
      },
-     "execution_count": 145,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -232,7 +232,7 @@
        "array([38.3218896 ,  1.17386382])"
       ]
      },
-     "execution_count": 146,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -260,7 +260,7 @@
        "(array([[-0.41220111,  0.01327689]]), array([-0.00323752]))"
       ]
      },
-     "execution_count": 147,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -281,12 +281,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Pipeline(memory=None,\n",
+       "     steps=[('poly_features', PolynomialFeatures(degree=15, include_bias=False, interaction_only=False)), ('std_scaler', StandardScaler(copy=True, with_mean=True, with_std=True)), ('regul_reg', Ridge(alpha=1, copy_X=True, fit_intercept=True, max_iter=None,\n",
+       "   normalize=False, random_state=None, solver='sag', tol=0.001))])"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#Lasso\n",
-    "#Ridge"
+    "from sklearn.linear_model import Ridge\n",
+    "ridge_reg_sag = Ridge(alpha=1, solver=\"sag\")\n",
+    "ridge_reg_sag = Pipeline([\n",
+    "                    (\"poly_features\", PolynomialFeatures(degree=15, include_bias=False)),\n",
+    "                    (\"std_scaler\", StandardScaler()),\n",
+    "                    (\"regul_reg\", ridge_reg_sag),\n",
+    "])\n",
+    "ridge_reg_sag.fit(X,Y)"
    ]
   },
   {
