--- a/in_dev/muon_tracks-worked.ipynb
+++ b/in_dev/muon_tracks-worked.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "5c0048fb",
    "metadata": {},
    "source": [
     "# Muon Tracks in CMS - worked example  \n",
@@ -11,7 +10,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "427acb68",
    "metadata": {},
    "source": [
     "## Problem  \n",
@@ -27,7 +25,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "72f2df6a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +37,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "7233f8e1",
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +115,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1231fc01",
    "metadata": {},
    "source": [
     "## Analysis  \n",
@@ -129,7 +124,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "4d5528dc",
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +152,6 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "435a440e",
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +180,6 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "8d9696ee",
    "metadata": {},
    "outputs": [
     {
@@ -217,7 +209,6 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "44a46944",
    "metadata": {},
    "outputs": [
     {
@@ -331,7 +322,6 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "0b0c7292",
    "metadata": {},
    "outputs": [
     {
@@ -359,7 +349,6 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "a7a266a9",
    "metadata": {},
    "outputs": [
     {
@@ -382,7 +371,6 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "e0c2306d",
    "metadata": {},
    "outputs": [
     {
@@ -404,7 +392,6 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "920597a3",
    "metadata": {},
    "outputs": [
     {
@@ -425,7 +412,6 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "10b2d969",
    "metadata": {},
    "outputs": [
     {
@@ -451,7 +437,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "af5d4b98",
    "metadata": {},
    "source": [
     "## Conclusion  \n",
@@ -461,21 +446,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.14+"
   }
  },
  "nbformat": 4,
