--- a/muon_tracks.ipynb
+++ b/muon_tracks.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "5c0048fb",
    "metadata": {},
    "source": [
     "# Muon Tracks in CMS  \n",
@@ -12,7 +11,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a439d697",
    "metadata": {},
    "source": [
     "## Pseudocode"
@@ -21,7 +19,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4699faad",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +28,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "435a440e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +37,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8d9696ee",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +46,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "44a46944",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +55,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c2f8c195",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,21 +64,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.14+"
   }
  },
  "nbformat": 4,
