--- a/in_dev/ML_muon_tracks.ipynb
+++ b/in_dev/ML_muon_tracks.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "fa364a11",
    "metadata": {},
    "source": [
     "# Introduction to Machine Learning using Muon Tracks in CMS  \n",
@@ -13,7 +12,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ef381959",
    "metadata": {},
    "source": [
     "## Problem  \n",
@@ -29,7 +27,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "edd9c8e8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +41,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d6580100",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +50,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9129769f",
    "metadata": {},
    "source": [
     "## Analysis  "
@@ -62,7 +57,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5e737b87",
    "metadata": {},
    "source": [
     "### Linear Regression\n",
@@ -75,7 +69,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6839bef3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_linear_model(x, m, b):   # x and y are track coordinates, scipy will optimize m & b to fit\n",
+    "    y = m * x + b\n",
+    "    return(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +94,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0d108fa1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +103,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "98337cf6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +112,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "38e03b33",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +121,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "34ad913e",
    "metadata": {},
    "source": [
     "### Linear Model Fitting using Stochastic Gradient Descent\n",
@@ -135,7 +135,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1f4c3e0d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +147,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "172995ce",
    "metadata": {},
    "source": [
     "The function that determines the learning rate at each iteration is called the learning schedule. If the learning rate is reduced too quickly, you may get stuck in a local minimum or even end up frozen before reaching the minimum. If the learning rate is reduced too slowly, you may jump around the minimum for a long time."
@@ -157,7 +155,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6b4c4f5f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,16 +164,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1ab1e0f3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Increase the learning rate to 3"
+    "# Increase the learning rate to 1.1"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "1cfe49af",
    "metadata": {},
    "source": [
     "### Polynomial Regression\n",
@@ -186,7 +181,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6686d866",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +195,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b9246f9b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +204,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bd5df953",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,14 +216,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "647312df",
    "metadata": {},
    "outputs": [],
    "source": [
     "# plot the original data and the optimized models (i.e., trendlines)\n",
     "plt.scatter(track['x'], track['y'], label=\"data\", color='k')\n",
-    "plt.plot(track['x'], linear_model(track['x'], lin_reg_params[0][0][0],lin_reg_params[1][0]), label=\"linear regression\",color='red')\n",
-    "plt.plot(track['x'], linear_model(track['x'], sgd_params[0],sgd_params[1]), label=\"SGD\",color='blue')\n",
+    "plt.plot(track['x'], plot_linear_model(track['x'], lin_reg_params[0][0][0],lin_reg_params[1][0]), label=\"linear regression\",color='red')\n",
+    "plt.plot(track['x'], plot_linear_model(track['x'], sgd_params[0],sgd_params[1]), label=\"SGD\",color='blue')\n",
     "plt.plot(track['x'], (poly_reg_params[0][0][1]*np.square(track['x']) + poly_reg_params[0][0][0]*track['x'] + poly_reg_params[1]), label=\"polynomial regg model\",color='black')\n",
     "\n",
     "plt.legend()\n",
@@ -241,7 +232,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5df53d2a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,7 +240,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7a17b1a5",
    "metadata": {},
    "source": [
     "### Regularized Models\n",
@@ -268,13 +257,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "bee7ce99",
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'Pipeline' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-6e661148b157>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlinear_model\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mRidge\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mridge_reg_sag\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mRidge\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0malpha\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0.0001\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msolver\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"sag\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m ridge_reg_sag = Pipeline([\n\u001b[0m\u001b[1;32m      4\u001b[0m                     \u001b[0;34m(\u001b[0m\u001b[0;34m\"poly_features\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mPolynomialFeatures\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdegree\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minclude_bias\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m                     \u001b[0;34m(\u001b[0m\u001b[0;34m\"std_scaler\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mStandardScaler\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'Pipeline' is not defined"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.linear_model import Ridge\n",
-    "ridge_reg_sag = Ridge(alpha=1, solver=\"sag\")\n",
+    "ridge_reg_sag = Ridge(alpha=0.0001, solver=\"sag\")\n",
     "ridge_reg_sag = Pipeline([\n",
     "                    (\"poly_features\", PolynomialFeatures(degree=2, include_bias=False)),\n",
     "                    (\"std_scaler\", StandardScaler()),\n",
@@ -286,7 +286,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c397ae5b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,7 +294,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f82e248e",
    "metadata": {},
    "source": [
     "[Least Absolute Shrinkage and Selection Operator (Lasso) Regression](https://scikit-learn.org/stable/modules/generated/sklearn.linear_model.Lasso.html) is another regularized version of Linear Regression."
@@ -304,16 +302,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "80460293",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Compare the Lasso regression prediction to your earlier predictions. Set the regularization constant to 1"
+    "# Compare the Lasso regression prediction to your earlier predictions. Set the regularization constant to 0.0001"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "5465a4b8",
    "metadata": {},
    "source": [
     "## Conclusion  \n"
@@ -321,7 +317,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "841c0a69",
    "metadata": {},
    "source": [
     "We have repeated the Muon Tracking exercise to perform a linear fit to the data. We improved our fitting techniques by using polynomial regression. We also introduced two new fitting techniques that use regularization to prevent overfitting our data: the Ridge Model and Lasso Model."
@@ -330,21 +325,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.14+"
   }
  },
  "nbformat": 4,
